--- a/scripts/R33_germfree.Rmd
+++ b/scripts/R33_germfree.Rmd
@@ -298,6 +298,52 @@ p1_with_median / p2 +
 
 ggsave('../data/R33_gf_full_course_with_median.jpg', width = 10, height = 7)
 ```
+```{r}
+# one figure where I only plot the median and the mean line
+summary_data <- bind_rows(
+  gavage_median_data %>% mutate(Metric = 'summarized with median') %>% rename(CFU = median_CFU),
+  gavage_mean_data %>% mutate(Metric = 'summarized with mean')%>% rename(CFU = Mean_CFU)
+)
+```
+
+
+```{r}
+ggplot(summary_data, aes(x = Time_h, y = CFU, color = Treatment, linetype = Metric)) +
+  # Draw lines connecting the points. The linetype (solid vs. dashed) will distinguish mean from median.
+  geom_line(linewidth = 1.2, alpha = 0.8) +
+  # Add points to show the exact measurement at each time point.
+  geom_point(size = 3.5, alpha = 0.8) +
+  
+  # Set the Y axis to a log10 scale and format the labels as 10^x.
+  scale_y_log10(
+    breaks = trans_breaks("log10", function(x) 10^x),
+    labels = trans_format("log10", math_format(10^.x)),
+    # We add a limit of 1 so the zero values are included at the baseline.
+    limits = c(1, NA)
+  ) +
+  
+  # Use a clean theme and add informative titles and labels.
+  theme_bw(base_size = 14) +
+  facet_grid(~ Metric) +
+  labs(
+    title = "Mean vs. Median E. faecalis Colonization",
+    subtitle = "Comparing Sucrose vs. Regular Water Groups",
+    x = "Time Post-Gavage (Hours)",
+    y = "CFU / gram of feces",
+    color = "Treatment Group",
+    linetype = "Metric"
+  ) +
+  
+  # Customize the plot's appearance.
+  theme(
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
+    legend.position = "right",
+    legend.title = element_text(face = "bold")
+  )
+
+ggsave('../data/R33_gm_summaries_2.jpg', width = 10, height = 5)
+```
 
 
 
